--- a/cards-memory/src/App.module.css
+++ b/cards-memory/src/App.module.css
@@ -1,4 +1,4 @@
-.app {
+.wrap {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -9,7 +9,7 @@
     min-height: 100vh;
 }
 
-.app h1 {
+.wrap h1 {
     font-size: 40px;
     text-align: center;
     color: rgb(180, 185, 191);
