--- a/cards-memory/src/App.module.css
+++ b/cards-memory/src/App.module.css
@@ -13,5 +13,8 @@
     font-size: 40px;
     text-align: center;
     color: rgb(180, 185, 191);
-    margin-bottom: 30px;
+    
+	margin-left: 10px;
+	margin-right: 10px;
+	margin-bottom: 30px;
 }
